added progress section and done rensponsive

--- a/index.html
+++ b/index.html
@@ -107,5 +107,39 @@
           </div>
         </div>
     </header>
+
+    <main>
+      <!-- Progress section -->
+      <section class="mt-14 lg:mt-40 max-w-[335px] mx-auto lg:max-w-[1170px]">
+        <div>
+          <h1 class="font-extrabold text-4xl text-[#131318] text-center">Professional Hockeys Club</h1>
+          <p class="w-60 lg:w-[907px] mx-auto mt-6 font-medium">
+            Welcome to the heart of exhilarating hockey action! Join our professional hockey club for thrilling games, elite athletes, and unforgettable moments. Experience unparalleled skill, passion, and camaraderie. Cheer for victory with us!</p>
+        </div>
+        <!-- progress bar -->
+        <div  class="mt-12 lg:mt-20 grid grid-cols-1 gap-9 lg:grid-cols-4">
+          <div class="text-center space-y-4">
+            <div class="radial-progress text-prime-col" style="--value:87;" role="progressbar">87%</div>
+            <h4 class="text-[#131318] text-xl font-semibold">Prayer Facility</h4>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div  class="text-center space-y-4">
+            <div class="radial-progress text-teal-500" style="--value:95;" role="progressbar">95%</div>
+            <h4  class="text-[#131318] text-xl font-semibold">Experienced Coach</h4>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div  class="text-center space-y-4">
+            <div class="radial-progress text-yellow-500" style="--value:90;" role="progressbar">90%</div>
+            <h4  class="text-[#131318] text-xl font-semibold">Senior Player</h4>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div  class="text-center space-y-4">
+            <div class="radial-progress text-sky-600" style="--value:80;" role="progressbar">80%</div>
+            <h4  class="text-[#131318] text-xl font-semibold">Training Ground</h4>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+      </section>
+    </main>
 </body>
 </html>
