added program section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
      .manrope{
         font-family: "Manrope", sans-serif;
      }
+  
 </style>
 
 
@@ -140,6 +141,51 @@
           </div>
         </div>
       </section>
+      <!-- Program section -->
+      <section class="mt-14 lg:mt-40 max-w-[335px] mx-auto lg:max-w-[1170px]">
+          <h1 class="text-[#131318] text-4xl font-extrabold text-center mb-10">Program Sections</h1>
+          <p class="font-medium mt-5 text-center mb-28">Aspiring players undergo rigorous training, fostering teamwork, skill development, and a passion for the game in our hockey program</p>
+      
+
+          <div class="flex flex-col -mb-4 lg:flex-row  lg:gap-7 ">
+            <div class="hero mb-10  h-[244px] lg:h-[338px]" style="background-image: url(./Images/2.png);">
+              <div class="rounded-xl hero-overlay bg-[#131318] bg-opacity-65"></div>
+              <div class="hero-content text-start text-neutral-content">
+                <div class="  ">
+                  <h1 class="mb-5  text-xl font-extrabold">Junior Program</h1>
+                  <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                    <button class="btn border-none text-white bg-prime-col">Register Now!</button>
+                </div>
+              </div>
+            </div>
+            <div class="hero  h-[244px] lg:h-[338px]" style="background-image: url(./Images/3.png);">
+              <div class="rounded-xl hero-overlay bg-[#131318] bg-opacity-65"></div>
+              <div class="hero-content text-start text-neutral-content">
+                <div class=" ">
+                  <h1 class="mb-5 text-xl font-extrabold">Teenager Program</h1>
+                  <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                    <button class="btn border-none text-white bg-prime-col w-auto">Register Now!</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mt-14 lg:mt-0" >
+            <div class="rounded-2xl hero h-[380px]" style="background-image: url(./Images/4.png);">
+              <div class=" rounded-2xl hero-overlay bg-[#131318] bg-opacity-65"></div>
+              <div class="hero-content text-center text-neutral-content">
+                <div class="max-w-md lg:-ml-[650px]">
+                  <h1 class="mb-5 text-5xl font-bold">Professional Program</h1>
+                  <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                  <div class="lg:-ml-[330px]"><button class="btn border-none text-white bg-prime-col ">Register Now</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </section>
+     
     </main>
 </body>
 </html>
