added clients qna section

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
           </div>
       </section>
      <!-- New Products -->
-     <section class="max-w-[335px] mx-auto lg:max-w-[1170px]">
-      <h1 class="text-[#131318 text-4xl font-extrabold text-center ]">Our New Products</h1>
+     <section class="mt-14 lg:mt-40 max-w-[335px] mx-auto lg:max-w-[1170px]">
+      <h1 class="text-[#131318 text-4xl font-extrabold text-center ] mb-9">Our New Products</h1>
       <p class="font-medium text-center ">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
       <!-- products grid -->
       <section class="grid grid-cols-1 gap-12 mt-20 lg:mt-32 lg:grid-cols-2">
@@ -306,6 +306,63 @@
         </div>
       </section>
       
+     </section>
+     <!-- Clients Question -->
+     <section class="mt-14 lg:mt-40 max-w-[335px] mx-auto lg:max-w-[1170px]">
+
+      <h1 class="text-[#131318] text-4xl font-extrabold text-center mb-10">Clients Question</h1>
+      <p class="font-medium text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <!-- p-accordian -->
+      <div class="flex flex-col lg:flex-row gap-16 mt-20 lg:gap-[200px]">
+        <div><img src="./Images/11.png" alt=""></div>
+        <div class="space-y-3">
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" checked="checked" /> 
+            <div class="collapse-title text-xl font-medium">
+              Our Equipment
+            </div>
+            <div class="collapse-content"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              Hockey Training
+            </div>
+            <div class="collapse-content"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              Private Lessons
+            </div>
+            <div class="collapse-content"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              Ski Touring
+            </div>
+            <div class="collapse-content"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              Booking
+            </div>
+            <div class="collapse-content"> 
+              <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+            </div>
+          </div>
+        </div>
+      </div>
      </section>
     </main>
 </body>
