added get in touch section

--- a/index.html
+++ b/index.html
@@ -364,6 +364,58 @@
         </div>
       </div>
      </section>
+     <!-- Get in touch -->
+     <section class="mt-14 lg:mt-40 max-w-[335px] relative mx-auto pb-16 lg:max-w-[1170px] ">
+        <h1 class="#131318 text-4xl font-extrabold text-center mb-12">Get In Touch</h1>
+        <p class="font-medium text-center mb-28">Feel free to reach out anytime! Whether it's questions, advice, or just a friendly chat, I'm here for you.</p>
+      <section class="flex flex-col lg:flex-row ">
+          <div class="space-y-28 lg:w-[372px] ">
+            <div>
+              <img src="./Images/Group 1171275317.png" alt="">
+              <p>Phone Number</p>
+              <h3 class="text-black font-medium">
+                (+62) 123-321-543</h3>
+            </div>
+            <div>
+              <img src="./Images/Group 1171275318.png" alt="">
+              <p>Phone Number</p>
+              <h3 class="text-black font-medium">
+                (+62) 123-321-543</h3>
+            </div>
+            <div>
+              <img src="./Images/Group 1171275321.png" alt="">
+              <p>Phone Number</p>
+              <h3 class="text-black font-medium">
+                (+62) 123-321-543</h3>
+            </div>
+          </div>
+          <!-- input -->
+          <div class="grid grid-cols-1 lg:grid-cols-2 lg:ml-32">
+            <div>
+              <h6 class="text-xl font-bold">Your name</h6>
+              <input class="w-80 h-16" type="text" placeholder="Enter your name">
+            </div>
+            <div>
+              <h6 class="text-xl font-bold">Your Email</h6>
+              <input class="w-80 h-16" type="text" placeholder="Enter your email">
+            </div>
+            <div>
+              <h6 class="text-xl font-bold">Subject</h6>
+              <input class="w-80 h-16" type="text" placeholder="Enter your Subject">
+            </div>
+            <div>
+              <h6 class="text-xl font-bold">Phone Number</h6>
+              <input class="w-80 h-16" type="text" placeholder="Enter your phone-number">
+            </div>
+            <div >
+              <h6 class="text-xl font-bold">Message</h6>
+              <textarea class="ml-10 lg:mt-5 w-[300px] h-[200px] lg:w-[672px] lg:h-[270px]" name="" id="" cols="30" placeholder="Your text here" rows="10"></textarea>
+              <button class="btn btn-active bg-prime-col w-[300px] lg:w-[674px] ml-10 absolute bottom-0">Secondary</button>
+            </div>
+            
+          </div>
+        </section>
+     </section>
     </main>
 </body>
 </html>
