--- a/index.html
+++ b/index.html
@@ -148,24 +148,22 @@
       
 
           <div class="flex flex-col -mb-4 lg:flex-row  lg:gap-7 ">
-            <div class="hero mb-10  h-[244px] lg:h-[338px]" style="background-image: url(./Images/2.png);">
+            <div class="hero mb-20 lg:mb-5 h-[244px] lg:h-[338px]" style="background-image: url(./Images/2.png);">
               <div class="rounded-xl hero-overlay bg-[#131318] bg-opacity-65"></div>
               <div class="hero-content text-start text-neutral-content">
                 <div class="  ">
                   <h1 class="mb-5  text-xl font-extrabold">Junior Program</h1>
-                  <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                  <p class="mb-5">Discover our elite junior hockey program, fostering skill development, teamwork, and sportsmanship. Our dedicated coaching staff ensures a competitive yet supportive environment for aspiring young athletes. Join us</p>
                     <button class="btn border-none text-white bg-prime-col">Register Now!</button>
                 </div>
               </div>
             </div>
-            <div class="hero  h-[244px] lg:h-[338px]" style="background-image: url(./Images/3.png);">
+            <div class="hero mb-10 lg:mb-10  h-[244px] lg:h-[338px]" style="background-image: url(./Images/3.png);">
               <div class="rounded-xl hero-overlay bg-[#131318] bg-opacity-65"></div>
               <div class="hero-content text-start text-neutral-content">
                 <div class=" ">
                   <h1 class="mb-5 text-xl font-extrabold">Teenager Program</h1>
-                  <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+                  <p class="mb-5">Elevate your game with our senior hockey program. Designed for seasoned players, our expert coaching, strategic training, and camaraderie create a winning combination for success on and off the ice.</p>
                     <button class="btn border-none text-white bg-prime-col w-auto">Register Now!</button>
                 </div>
               </div>
@@ -174,12 +172,11 @@
           <div class="mt-14 lg:mt-0" >
             <div class="rounded-2xl hero h-[380px]" style="background-image: url(./Images/4.png);">
               <div class=" rounded-2xl hero-overlay bg-[#131318] bg-opacity-65"></div>
-              <div class="hero-content text-center text-neutral-content">
+              <div class="hero-content text-neutral-content">
                 <div class="max-w-md lg:-ml-[650px]">
-                  <h1 class="mb-5 text-5xl font-bold">Professional Program</h1>
-                  <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
-                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
-                  <div class="lg:-ml-[330px]"><button class="btn border-none text-white bg-prime-col ">Register Now</button></div>
+                  <h1 class="mb-5  text-xl font-bold">Professional Program</h1>
+                  <p class="mb-5">"Elevate your game to the professional level with our elite hockey program. World-class coaching, cutting-edge training, and a competitive atmosphere shape champions in our professional hockey development program.</p>
+                  <div><button class="btn border-none text-white bg-prime-col ">Register Now</button></div>
                 </div>
               </div>
             </div>
@@ -188,7 +185,7 @@
      <!-- New Products -->
      <section class="mt-14 lg:mt-40 max-w-[335px] mx-auto lg:max-w-[1170px]">
       <h1 class="text-[#131318 text-4xl font-extrabold text-center ] mb-9">Our New Products</h1>
-      <p class="font-medium text-center ">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <p class="font-medium text-center ">"Explore our latest innovations! From cutting-edge tech to stylish designs, our new products redefine excellence and functionality </p>
       <!-- products grid -->
       <section class="grid grid-cols-1 gap-12 mt-20 lg:mt-32 lg:grid-cols-2">
         <div class="flex flex-col lg:flex-row items-center gap-4">
@@ -311,7 +308,7 @@
      <section class="mt-14 lg:mt-40 max-w-[335px] mx-auto lg:max-w-[1170px]">
 
       <h1 class="text-[#131318] text-4xl font-extrabold text-center mb-10">Clients Question</h1>
-      <p class="font-medium text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      <p class="font-medium text-center">Client Q&A: Your questions answered! Discover insights, solutions, and expert advice tailored to your needs </p>
       <!-- p-accordian -->
       <div class="flex flex-col lg:flex-row gap-16 mt-20 lg:gap-[200px]">
         <div><img src="./Images/11.png" alt=""></div>
